--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 						<header>
 							<span class="avatar"><img src="https://bensarmiento.com/images/avatars/ben.jpg" alt="" /></span>
 							<h1>Ben Sarmiento</h1>
-							<p>Engineering Manager | Singapore | Foodpanda | Delivery Hero</p>
+							<p>Engineering Manager | Singapore</p>
+							<p>Foodpanda | Delivery Hero</p>
 						</header>
 
 																<hr />
