--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<title>Ben Sarmiento</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" href="https://bensarmiento.com/images/icons/favicon.ico" type="image/x-icon" />
-		<link rel="apple-touch-icon-precomposed" href="https://bensarmiento.com/images/icons/apple-touch-icon-precomposed.png" />
+		<link rel="icon" href="/images/icons/favicon.ico" type="image/x-icon" />
+		<link rel="apple-touch-icon-precomposed" href="/images/icons/apple-touch-icon-precomposed.png" />
 
-		<link rel="stylesheet" href="https://bensarmiento.com/assets/css/main.css" />
+		<link rel="stylesheet" href="/assets/css/main.css" />
 
 
-		<noscript><link rel="stylesheet" href="https://bensarmiento.com/assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
 		<style>
 		body {
 		height: 100%;
@@ -37,7 +37,7 @@
 
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="https://bensarmiento.com/images/avatars/ben.jpg" alt="" /></span>
+							<span class="avatar"><img src="/images/avatars/avatar2020.jpg" alt="" /></span>
 							<h1>Ben Sarmiento</h1>
 							<p>Engineering Manager | Singapore</p>
 							<p>Foodpanda | Delivery Hero</p>
