--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 						<header>
 							<span class="avatar"><img src="/images/avatars/avatar2020.jpg" alt="" /></span>
 							<h1>Ben Sarmiento</h1>
-							<p>Engineering Manager | Singapore</p>
-							<p>Foodpanda | Delivery Hero</p>
+							<p>Engineering Manager | Foodpanda</p>
+							<p> Delivery Hero | Singapore</p>
 						</header>
 
 																<hr />
@@ -64,7 +64,7 @@
 						<footer>
 							<ul class="icons">
 
-									<li><a href="https://blog.bensarmiento.com" target="_blank" class="fa-comment">Blog</a></li>
+									<li><a href="https://dev.to/yowmamasita/" target="_blank" class="fa-comment">DEV.to</a></li>
 
 									<li><a href="https://www.facebook.com/bensarmiento" target="_blank" class="fa-facebook">Facebook</a></li>
 
