Update picture url

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="/images/avatars/avatar2020.jpg" alt="" /></span>
+							<span class="avatar"><img src="/images/avatars/avatar2020.png" alt="" /></span>
 							<h1>Ben Sarmiento</h1>
 							<p>Engineering Manager | Foodpanda</p>
 							<p> Delivery Hero | Singapore</p>
