--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<header>
 							<span class="avatar"><img src="/images/avatars/avatar2020.png" alt="" /></span>
 							<h1>Ben Sarmiento</h1>
-							<p>Engineering Manager | Foodpanda</p>
+							<p>Head of Engineering | Nimbly Technologies</p>
 							<p><a target="_blank" href="https://keys.mailvelope.com/pks/lookup?op=get&search=me%40bensarmiento.com">PGP KEY</a></p>
 						</header>
 
