--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 						<header>
 							<span class="avatar"><img src="/images/avatars/avatar2020.png" alt="" /></span>
 							<h1>Ben Sarmiento</h1>
-							<p>Head of Engineering | Nimbly Technologies</p>
+							<p>IAM Platform - Engineering Manager | Forto</p>
+							<p>Ex-Head of Engineering | Nimbly Technologies</p>
+							<p>Ex-Engineering Manager | Foodpanda / Delivery Hero</p>
+							<p>DevOps | IAM | MarTech</p>
 							<p><a target="_blank" href="https://keys.mailvelope.com/pks/lookup?op=get&search=me%40bensarmiento.com">PGP KEY</a></p>
 						</header>
 
@@ -64,9 +67,7 @@
 						<footer>
 							<ul class="icons">
 
-									<li><a href="https://dev.to/yowmamasita/" target="_blank" class="fa-comment">DEV.to</a></li>
-
-									<li><a href="https://www.facebook.com/bensarmiento" target="_blank" class="fa-facebook">Facebook</a></li>
+									<li><a href="https://ben.com.de" target="_blank" class="fa-comment">DEV.to</a></li>
 
 									<li><a href="https://ph.linkedin.com/in/bensarmiento" target="_blank" class="fa-linkedin">LinkedIn</a></li>
 
@@ -80,7 +81,6 @@
 					<footer id="footer">
 						<ul class="copyright">
 							<li>&copy; Ben Sarmiento</li>
-							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
