--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en-us">
 <html>
 	<head>
-		<title>Ben Sarmiento</title>
+		<title>Ben Adrian Sarmiento</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" href="/images/icons/favicon.ico" type="image/x-icon" />
@@ -41,7 +41,8 @@
 							<h1>Ben Sarmiento</h1>
 							<p>IAM Platform - Engineering Manager | Forto</p>
 							<p>Ex-Head of Engineering | Nimbly Technologies</p>
-							<p>Ex-Engineering Manager | Foodpanda / Delivery Hero</p>
+							<p>Ex-Engineering Manager | Foodpanda, Delivery Hero</p>
+							<p>Ex-Head of Tech | Carmudi</p>
 							<p>DevOps | IAM | MarTech</p>
 							<p><a target="_blank" href="https://keys.mailvelope.com/pks/lookup?op=get&search=me%40bensarmiento.com">PGP KEY</a></p>
 						</header>
