--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 							<p>Ex-Head of Engineering | Nimbly Technologies</p>
 							<p>Ex-Engineering Manager | Foodpanda, Delivery Hero</p>
 							<p>Ex-Head of Tech | Carmudi</p>
-							<p>DevOps | IAM | MarTech</p>
-							<p><a target="_blank" href="https://keys.mailvelope.com/pks/lookup?op=get&search=me%40bensarmiento.com">PGP KEY</a></p>
+							<p>DevOps | Cloud Native | Marketing Tech</p>
 						</header>
 
 																<hr />
@@ -73,6 +72,8 @@
 									<li><a href="https://ph.linkedin.com/in/bensarmiento" target="_blank" class="fa-linkedin">LinkedIn</a></li>
 
 									<li><a href="https://github.com/yowmamasita" target="_blank" class="fa-github">Github</a></li>
+
+									<li><a href="https://keys.mailvelope.com/pks/lookup?op=get&search=me%40bensarmiento.com" target="_blank" class="fa-key">PGP Key</a></li>
 
 							</ul>
 						</footer>
