--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="/images/avatars/avatar2020.png" alt="" /></span>
-							<h1>Ben Sarmiento</h1>
-							<p>IAM Platform - Engineering Manager | Forto</p>
+							<h1>Ben Adrian Sarmiento</h1>
+							<p>IAM Platform, Engineering Manager | Forto</p>
 							<p>Ex-Head of Engineering | Nimbly Technologies</p>
-							<p>Ex-Engineering Manager | Foodpanda, Delivery Hero</p>
-							<p>Ex-Head of Tech | Carmudi</p>
-							<p>DevOps | Cloud Native | Marketing Tech</p>
+							<p>Marketing Tech, Ex-Engineering Manager | Foodpanda, Delivery Hero</p>
+							<p>Ex-Head of Technology | Carmudi</p>
+							<p>DevOps | Cloud Native | Agile</p>
 						</header>
 
 																<hr />
