--- a/index.html
+++ b/index.html
@@ -1,188 +1,195 @@
-<!DOCTYPE html>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136883390-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-136883390-1');
+</script>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <title>Ben Sarmiento - Product Builder & Tech Leader</title>
+    <meta content="text/html; charset=unicode" http-equiv="Content-Type">
+    <meta name="description" content="Ben Sarmiento is a product builder, indie hacker, and tech leader with expertise in web applications, mobile apps, and cloud services. Over 10 years of experience in building successful products and leading engineering teams.">
+    <meta name="keywords" content="product builder, indie hacker, tech leader, engineering manager, full stack developer, cloud architect, Berlin">
+    <meta name="author" content="Ben Adrian C. Sarmiento">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ben Adrian C. Sarmiento</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 20px;
-        color: #000080;
-      }
-
-      a {
-        color: #800080;
-        text-decoration: none;
-      }
-
-      a:visited {
-        color: #ff0000;
-      }
-
-      .header {
-        text-align: center;
-        margin-bottom: 20px;
-      }
-
-      .contact-info {
-        font-size: 0.9em;
-        margin: 10px 0;
-      }
-
-      nav {
-        margin: 20px 0;
-      }
-
-      nav ul {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
-        list-style: none;
-        padding: 0;
-      }
-
-      section {
-        margin: 40px 0;
-      }
-
-      .section-title {
-        text-align: center;
-        font-size: 1.5em;
-        margin-bottom: 20px;
-      }
-
-      .skills-list {
-        list-style: none;
-        padding: 0;
-      }
-
-      .experience-item {
-        margin-bottom: 15px;
-      }
-
-      .experience-title {
-        font-weight: bold;
-        text-transform: uppercase;
-      }
-
-      .projects-list {
-        text-align: center;
-        list-style: none;
-        padding: 0;
-      }
-
-      .projects-list li {
-        margin: 10px 0;
-      }
-
-      footer {
-        text-align: center;
-        font-size: 0.9em;
-        margin-top: 40px;
-      }
-    </style>
+    <meta property="og:title" content="Ben Sarmiento - Product Builder & Tech Leader">
+    <meta property="og:description" content="Product builder, indie hacker, and tech leader with expertise in web applications, mobile apps, and cloud services.">
+    <meta property="og:type" content="website">
+    <meta name="robots" content="index, follow">
   </head>
-  <body>
-    <header class="header">
-      <h1>Ben Adrian C. Sarmiento</h1>
-      <div class="contact-info">
-        Hartriegelstraße 130A, Berlin 12439<br>
-        +4915774990994 | me@bensarmiento.com<br>
-        <a href="https://www.linkedin.com/in/bensarmiento" target="_blank" rel="noopener">LinkedIn</a> |
-        <a href="https://github.com/yowmamasita" target="_blank" rel="noopener">GitHub</a>
-      </div>
-    </header>
+  <body link="#800080" bgcolor="#ffffff" text="#000080" vlink="#ff0000">
+    <b>
+      <p align="center">
+        <font size="6">B</font><font size="4">en </font>
+        <font size="6">A</font><font size="4">drian </font>
+        <font size="6">C</font><font size="4">. </font>
+        <font size="6">S</font><font size="4">armiento</font>
+        <br><font size="2">Berlin, Germany</font>
+        <br><font size="3">Official Home Page</font>
+      </p>
+    </b>
+    <hr>
 
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#resume">Resume</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+    <center>
+      <table border="0" cellspacing="0" width="90%">
+        <tbody>
+          <tr>
+            <td height="45" valign="top" width="50%">
+              <ul>
+                <li><a href="#about">About Me</a>
+                <br><font size="1">Product Builder & Tech Leader</font></li>
+              </ul>
+            </td>
+            <td height="45" valign="top" width="50%">
+              <ul>
+                <li><a href="#resume">Professional Experience</a>
+                <br><font size="1">Updated March 2025</font></li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td height="45" valign="top" width="50%">
+              <ul>
+                <li><a href="#achievements">Professional Achievements</a>
+                <br><font size="1">Notable Projects & Recognition</font></li>
+              </ul>
+            </td>
+            <td height="45" valign="top" width="50%">
+              <ul>
+                <li>
+                  <a href="https://www.linkedin.com/in/bensarmiento" target="_blank">LinkedIn Profile</a>
+                  <br><font size="1">Professional Network</font>
+                </li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td height="45" valign="top" width="50%">
+              <ul>
+                <li>
+                  <a href="https://github.com/yowmamasita" target="_blank">GitHub Profile</a>
+                  <br><font size="1">Open Source Contributions</font>
+                </li>
+              </ul>
+            </td>
+            <td height="45" valign="top" width="50%">
+              <ul>
+                <li><a href="#contact">Contact Information</a>
+                <br><font size="1">Professional Inquiries</font></li>
+              </ul>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </center>
 
-    <main>
-      <section id="about">
-        <h2 class="section-title">About</h2>
-        <p>Full-stack technology leader with expertise in web applications, mobile apps, and cloud services.</p>
-      </section>
+    <hr>
 
-      <section id="resume">
-        <h2 class="section-title">Resume</h2>
+    <div id="about">
+      <p align="center"><b><font size="4">About Me</font></b></p>
+      <p align="center"><font size="2">
+        Over 10 years in full-stack tech leadership, skilled in building and maintaining both front-end and back-end aspects of web applications, mobile apps, and cloud services. My leadership background was developed through management roles and founding a technology startup during college, giving me a unique perspective on tech business operations.<br><br>
+        Keen focus on developing customer-oriented solutions, drawing from early career experiences in a startup environment. Proven track record in guiding tech teams with empathy, emphasizing open communication, collaboration, and a culture of continuous learning.<br><br>
+        Early programming experience, starting in grade school, which fostered a long-standing interest in technology and software innovation. Passionate about the principles of hacker culture, valuing hands-on problem-solving and innovation in technology.
+      </font></p>
+    </div>
 
-        <h3>Professional Experience</h3>
-        <div class="experience-item">
-          <div class="experience-title">Staff Engineer | Enter | September 2024 to Present</div>
-          <p>Developed features for Digital Twin crew simulating building energy efficiency ratings.</p>
-        </div>
+    <div id="resume">
+      <hr>
+      <p align="center"><b><font size="4">Professional Experience</font></b></p>
 
-        <div class="experience-item">
-          <div class="experience-title">Engineering Manager, Platform/IAM | Forto | January 2022 to August 2024</div>
-          <p>Migrated authentication systems, introduced automated load testing, and deployed centralized authorization system.</p>
-        </div>
+      <p><font size="2">
+        <b>STAFF ENGINEER | ENTER | SEPTEMBER 2024 TO PRESENT</b><br>
+        • Worked on Digital Twin crew that creates a simulation of a building to compute for its energy efficiency rating<br>
+        • Developed features that identifies the building on a specified address and process that to determine the correct energy efficiency rating of the building
+      </font></p>
 
-        <div class="experience-item">
-          <div class="experience-title">Head of Engineering | Nimbly Technologies | February 2021 to January 2022</div>
-          <p>Reduced app crash rates, increased observability, and set up CI/CD pipelines for mobile, web, and backend services.</p>
-        </div>
+      <p><font size="2">
+        <b>ENGINEERING MANAGER, PLATFORM/IAM | FORTO | JANUARY 2022 TO AUGUST 2024</b><br>
+        • Most frugal management experience: managing 1–2 engineers with huge scope (all high traffic, tier 1 services)<br>
+        • Migrated the organization's authentication system to Keycloak and developed custom "magic link" authentication<br>
+        • Introduced the company's inaugural automated load testing system<br>
+        • Improved product quality with contract testing and automated incident detection<br>
+        • Delivered first centralized authorization system using OPA and Edge Stack API gateway
+      </font></p>
 
-        <div class="experience-item">
-          <div class="experience-title">Engineering Manager, Marketing Tech | Delivery Hero | September 2019 to February 2021</div>
-          <p>Managed high-traffic services, incident management, and improved critical testing coverage.</p>
-        </div>
+      <p><font size="2">
+        <b>HEAD OF ENGINEERING | NIMBLY TECHNOLOGIES | FEBRUARY 2021 TO JANUARY 2022</b><br>
+        • Reduced crash rate and ANRs for Android and iOS apps by over 95% (1,000 to 50 crashes/day)<br>
+        • Added instrumentation (Sentry, Crashlytics, Google Cloud Trace) for better observability<br>
+        • Migrated platform to Terraform and setup CI/CD pipeline for all services<br>
+        • Increased tech team headcount by 50% (10 to 15) through referrals<br>
+        • Implemented effective tech onboarding and established postmortem culture
+      </font></p>
 
-        <div class="experience-item">
-          <div class="experience-title">Head of Technology | Carmudi | October 2016 to September 2019</div>
-          <p>Optimized cloud costs, streamlined build pipelines, and grew the tech department.</p>
-        </div>
+      <p><font size="2">
+        <b>ENGINEERING MANAGER, MARKETING TECH | DELIVERY HERO | SEPTEMBER 2019 TO FEBRUARY 2021</b><br>
+        • Managed service handling 900K requests per minute with 100% test coverage<br>
+        • Part of stability guild handling 1200 monthly alerts for Foodpanda platform<br>
+        • Developed marketing platform managing 300+ targeted campaigns<br>
+        • Led 8 developers across 3 teams, scoring 50 pts above company NPS benchmark<br>
+        • Tech stack: React/Redux, Go, DynamoDB, Redis, Aurora, AWS, Kubernetes, Terraform
+      </font></p>
 
-        <div class="experience-item">
-          <div class="experience-title">Associate Manager | Accenture | February 2014 to October 2016</div>
-          <p>Worked on microservices and cloud-based tools for large-scale operations.</p>
-        </div>
+      <p><font size="2">
+        <b>HEAD OF TECHNOLOGY | CARMUDI | OCTOBER 2016 TO SEPTEMBER 2019</b><br>
+        • Reduced monthly operational costs by over 70% through optimization<br>
+        • Built car lead management system used by 50 dealers and 300 sales agents<br>
+        • Created global ads network leading to millions in revenue<br>
+        • Grew tech department from 3 to 15 people across multiple teams<br>
+        • Tech stack: PHP, CQRS, event sourcing, Angular/RxJs, Vue, Redis, AWS
+      </font></p>
 
-        <div class="experience-item">
-          <div class="experience-title">Founder | MangoVPN | September 2011 to March 2012</div>
-          <p>Built and scaled a VPN service.</p>
-        </div>
+      <p><font size="2">
+        <b>ASSOCIATE MANAGER | ACCENTURE | FEBRUARY 2014 TO OCTOBER 2016</b><br>
+        • Built G4S platform managing 500,000 security personnel<br>
+        • Developed cloud taxi dispatcher for Beck Taxi (2000+ trips/hour)<br>
+        • Managed 20 successful project releases with 2 teams<br>
+        • "Employee of the Month" for 3 months; Highest utilization Y2014, Y2015<br>
+        • Tech stack: Python, Java, Angular, Google Cloud, microservices, SAFe
+      </font></p>
 
-        <h3>Technical Skills</h3>
-        <ul class="skills-list">
-          <li>Full-Stack Development & Tech Leadership</li>
-          <li>Product & Engineering Management</li>
-          <li>DevOps Practices & Kubernetes</li>
-          <li>Test-Driven Development (TDD) & Automated Testing</li>
-          <li>Open-Source Community Contributions</li>
-        </ul>
-      </section>
+      <p><font size="2">
+        <b>FOUNDER | MANGOVPN | SEPTEMBER 2011 TO MARCH 2012</b><br>
+        • Single-handedly built VPN company from ground up<br>
+        • Scaled revenue to P2 million in 6 months as a college student
+      </font></p>
+    </div>
 
-      <section id="projects">
-        <h2 class="section-title">Projects & Links</h2>
-        <ul class="projects-list">
-          <li><a href="https://github.com/yowmamasita" target="_blank" rel="noopener">GitHub Profile</a></li>
-          <li><a href="https://www.linkedin.com/in/bensarmiento" target="_blank" rel="noopener">LinkedIn Profile</a></li>
-          <li><a href="https://github-readme-stats.vercel.app/api?username=yowmamasita&theme=github_dark&show_icons=true" target="_blank" rel="noopener">GitHub Stats</a></li>
-          <li><a href="https://mastodon.social/@12345" target="_blank" rel="noopener">Home Internet Speed Monitor</a></li>
-          <li><a href="https://debridmediamanager.com/" target="_blank" rel="noopener">Debrid Media Manager</a></li>
-          <li><a href="https://apps.apple.com/de/app/padel-scorer/id6449323433?l=en" target="_blank" rel="noopener">Padel Scorer App</a></li>
-        </ul>
-      </section>
+    <div id="achievements">
+      <hr>
+      <p align="center"><b><font size="4">Professional Achievements</font></b></p>
+      <p align="center"><font size="2">
+        • Created the first AI news summary bot on Reddit (Featured on <a href="http://tcrn.ch/16Nz7pK" target="_blank">TechCrunch</a>)<br>
+        • Community-sponsored developer at <a href="https://github.com/sponsors/debridmediamanager" target="_blank">GitHub Sponsors</a><br>
+        <br>
+        <b>Recent Projects:</b><br>
+        • <a href="https://debridmediamanager.com/" target="_blank">Debrid Media Manager</a><br>
+        • <a href="https://apps.apple.com/de/app/padel-scorer/id6449323433?l=en" target="_blank">Padel Scorer App</a><br>
+        • <a href="https://mastodon.social/@12345" target="_blank">Internet Speed Monitor</a>
+      </font></p>
+    </div>
 
-      <section id="contact">
-        <h2 class="section-title">Contact</h2>
-        <p style="text-align: center">
-          Email: <a href="mailto:me@bensarmiento.com">me@bensarmiento.com</a>
-        </p>
-      </section>
-    </main>
+    <div id="contact">
+      <hr>
+      <p align="center"><b><font size="4">Contact Information</font></b></p>
+      <p align="center"><font size="2">
+        For professional opportunities and collaborations,<br>
+        please connect via <a href="https://www.linkedin.com/in/bensarmiento" target="_blank">LinkedIn</a>
+      </font></p>
+    </div>
 
-    <footer>
-      <a href="#contact">Contact</a> | &copy; 2011-2025 Ben Adrian C. Sarmiento
-    </footer>
+    <hr>
+    <p align="center"><font size="1">
+      Programming is one of my hobbies, and I am a community-sponsored open-source developer.<br>
+      Direct responses may be delayed due to current commitments.
+    </font></p>
+
+    <hr>
+    <p align="left"><font size="2">Copyright © 2011-2025 Ben Adrian C. Sarmiento</font></p>
   </body>
 </html>
