--- a/index.html
+++ b/index.html
@@ -1,18 +1,9 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136883390-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-136883390-1');
-</script>
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html lang="en">
   <head>
     <title>Ben Sarmiento - Product Builder & Tech Leader</title>
     <meta content="text/html; charset=unicode" http-equiv="Content-Type">
-    <meta name="description" content="Ben Sarmiento is a product builder, indie hacker, and tech leader with expertise in web applications, mobile apps, and cloud services. Over 10 years of experience in building successful products and leading engineering teams.">
+    <meta name="description" content="Ben Sarmiento is a product builder, indie hacker, and tech leader with expertise in web applications, mobile apps, and cloud services.">
     <meta name="keywords" content="product builder, indie hacker, tech leader, engineering manager, full stack developer, cloud architect, Berlin">
     <meta name="author" content="Ben Adrian C. Sarmiento">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -92,9 +83,7 @@
     <div id="about">
       <p align="center"><b><font size="4">About Me</font></b></p>
       <p align="center"><font size="2">
-        Over 10 years in full-stack tech leadership, skilled in building and maintaining both front-end and back-end aspects of web applications, mobile apps, and cloud services. My leadership background was developed through management roles and founding a technology startup during college, giving me a unique perspective on tech business operations.<br><br>
-        Keen focus on developing customer-oriented solutions, drawing from early career experiences in a startup environment. Proven track record in guiding tech teams with empathy, emphasizing open communication, collaboration, and a culture of continuous learning.<br><br>
-        Early programming experience, starting in grade school, which fostered a long-standing interest in technology and software innovation. Passionate about the principles of hacker culture, valuing hands-on problem-solving and innovation in technology.
+        Senior technology leader with 10+ years of experience in engineering management and full-stack development.
       </font></p>
     </div>
 
@@ -104,59 +93,37 @@
 
       <p><font size="2">
         <b>STAFF ENGINEER | ENTER | SEPTEMBER 2024 TO PRESENT</b><br>
-        • Worked on Digital Twin crew that creates a simulation of a building to compute for its energy efficiency rating<br>
-        • Developed features that identifies the building on a specified address and process that to determine the correct energy efficiency rating of the building
+        Worked on 3d model based digital twin initiative for energy efficiency simulation.
       </font></p>
 
       <p><font size="2">
         <b>ENGINEERING MANAGER, PLATFORM/IAM | FORTO | JANUARY 2022 TO AUGUST 2024</b><br>
-        • Most frugal management experience: managing 1–2 engineers with huge scope (all high traffic, tier 1 services)<br>
-        • Migrated the organization's authentication system to Keycloak and developed custom "magic link" authentication<br>
-        • Introduced the company's inaugural automated load testing system<br>
-        • Improved product quality with contract testing and automated incident detection<br>
-        • Delivered first centralized authorization system using OPA and Edge Stack API gateway
+        Managed high-traffic platform initiatives and spearheaded authentication transformation.
       </font></p>
 
       <p><font size="2">
         <b>HEAD OF ENGINEERING | NIMBLY TECHNOLOGIES | FEBRUARY 2021 TO JANUARY 2022</b><br>
-        • Reduced crash rate and ANRs for Android and iOS apps by over 95% (1,000 to 50 crashes/day)<br>
-        • Added instrumentation (Sentry, Crashlytics, Google Cloud Trace) for better observability<br>
-        • Migrated platform to Terraform and setup CI/CD pipeline for all services<br>
-        • Increased tech team headcount by 50% (10 to 15) through referrals<br>
-        • Implemented effective tech onboarding and established postmortem culture
+        Optimized mobile app performance and scaled the engineering team.
       </font></p>
 
       <p><font size="2">
         <b>ENGINEERING MANAGER, MARKETING TECH | DELIVERY HERO | SEPTEMBER 2019 TO FEBRUARY 2021</b><br>
-        • Managed service handling 900K requests per minute with 100% test coverage<br>
-        • Part of stability guild handling 1200 monthly alerts for Foodpanda platform<br>
-        • Developed marketing platform managing 300+ targeted campaigns<br>
-        • Led 8 developers across 3 teams, scoring 50 pts above company NPS benchmark<br>
-        • Tech stack: React/Redux, Go, DynamoDB, Redis, Aurora, AWS, Kubernetes, Terraform
+        Architected high-scale systems and enhanced platform stability.
       </font></p>
 
       <p><font size="2">
         <b>HEAD OF TECHNOLOGY | CARMUDI | OCTOBER 2016 TO SEPTEMBER 2019</b><br>
-        • Reduced monthly operational costs by over 70% through optimization<br>
-        • Built car lead management system used by 50 dealers and 300 sales agents<br>
-        • Created global ads network leading to millions in revenue<br>
-        • Grew tech department from 3 to 15 people across multiple teams<br>
-        • Tech stack: PHP, CQRS, event sourcing, Angular/RxJs, Vue, Redis, AWS
+        Reduced costs and scaled global lead management and advertising systems.
       </font></p>
 
       <p><font size="2">
         <b>ASSOCIATE MANAGER | ACCENTURE | FEBRUARY 2014 TO OCTOBER 2016</b><br>
-        • Built G4S platform managing 500,000 security personnel<br>
-        • Developed cloud taxi dispatcher for Beck Taxi (2000+ trips/hour)<br>
-        • Managed 20 successful project releases with 2 teams<br>
-        • "Employee of the Month" for 3 months; Highest utilization Y2014, Y2015<br>
-        • Tech stack: Python, Java, Angular, Google Cloud, microservices, SAFe
+        Led enterprise platform development and cloud taxi dispatch system.
       </font></p>
 
       <p><font size="2">
         <b>FOUNDER | MANGOVPN | SEPTEMBER 2011 TO MARCH 2012</b><br>
-        • Single-handedly built VPN company from ground up<br>
-        • Scaled revenue to P2 million in 6 months as a college student
+        Founded a full-stack VPN service achieving rapid market success.
       </font></p>
     </div>
 
